# learning-where-to-look

./: .gitignore  CMakeLists.txt  README.md  download.sh  pyproject.toml
configurations/: sampler_matterport_1.cfg  sampler_matterport_10.cfg  sampler_matterport_100.cfg  sampler_matterport_50.cfg
lwl/: CMakeLists.txt  _version.py
lwl/apps/generate_grid/: generate_viewpoints.sh
lwl/apps/inference/: compute_active_map.py  evaluate_model.py  generate_reprojections.py
lwl/apps/preprocess/: README.md  active_viewpoints_computation_reprojection.py  generate_viewpoints.sh  grid_converter.py
lwl/apps/preprocess_data/: preprocess.py  run_preprocess.sh
lwl/apps/training/: README.md  data_loader.py  generate_training_data.py  mlp.py  mlp_train.py  mlp_trainer.py  run_generate_training_data.sh  standardize_data_5d_features.py  train.py  trainer.py
lwl/apps/utils/: calculate_grid_accuracy.py  camera.py  data_loader.py  dataset_generator.py  general_utils.py  plotting.py  seed.py
lwl/apps/utils/colmap/: colmap_read_write_model.py
lwl/src/: CMakeLists.txt
lwl/src/data_structure/: CMakeLists.txt  active_camera_wrapper.cuh  camera.cpp  camera.cu  camera.cuh  camera_active.cuh  camera_grid.cu  camera_grid.cuh  cuda_algebra.cuh  cuda_math.cuh  cuda_matrix.cu  cuda_matrix.cuh  cuda_matrix_conversion.cuh  cuda_utils.cuh  params.h
lwl/src/data_structure/pybind/: active_viewpoints_generator_pybind.cpp
lwl/tests/: CMakeLists.txt  test_algebra_operations.cu  test_camera_grid.cu  test_cuda_matrix.cu  test_projections.cu  test_utils.cuh
